styling changes, fix theme icon bug and card clipping

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -9,10 +9,10 @@ html {
   overflow-x: hidden;
 }
 body {
-  height: 100%;
-  width: 100%;
   top: 10%;
-  background-image: linear-gradient(15deg, #62137a 0%, #d08080 100%);
+  background-image: linear-gradient(to top, #ace0f9 0%, #fff1eb 80%);
+  height: 90%;
+  width: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -32,7 +32,11 @@ header {
   justify-content: center;
   align-items: center;
   border-bottom: .4rem solid grey;
-  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+  background: linear-gradient(to bottom, rgba(255,255,255,0.15) 0%, rgba(224, 224, 224, 0.15) 100%), radial-gradient(at top center, rgba(255, 255, 255, 0.4) 0%, rgba(187, 187, 187, 0.4) 120%) #ffffff; 
+  background-blend-mode: multiply,multiply;
+  /* background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%); */
+
+
 }
 .logo {
   position: absolute;
